--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,9 @@
     "Algorithms\\C++/Decode_The_Message": true,
     "Algorithms\\Python/Decode_The_Message": true,
     "Algorithms\\C++/Partitioning_Into_Minimum_Number_Of_Deci-Binary_Numbers": true,
-    "Algorithms\\Python/Partitioning_Into_Minimum_Number_Of_Deci-Binary_Numbers": true
+    "Algorithms\\Python/Partitioning_Into_Minimum_Number_Of_Deci-Binary_Numbers": true,
+    "Algorithms\\C++/Jewels_And_Stones": true,
+    "Algorithms\\Python/Jewels_And_Stones": true
   },
   "explorerExclude.backup": {}
 }
