--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,9 @@
     "Algorithms\\C++/Number of Laser_Beams_in_a_Bank": true,
     "Algorithms\\Python/Number of Laser_Beams_in_a_Bank": true,
     "Algorithms\\C++/Minimum_Number_of_Operations_to_Move_All_Balls_to_Each_Box": true,
-    "Algorithms\\Python/Minimum_Number_of_Operations_to_Move_All_Balls_to_Each_Box": true
+    "Algorithms\\Python/Minimum_Number_of_Operations_to_Move_All_Balls_to_Each_Box": true,
+    "Algorithms\\C++/Build_Array_from_Permutation": true,
+    "Algorithms\\Python/Build_Array_from_Permutation": true
   },
   "explorerExclude.backup": {}
 }
