--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,9 @@
     "Algorithms\\C++/Number_of_Good_Pairs": true,
     "Algorithms\\Python/Number_of_Good_Pairs": true,
     "Algorithms\\C++/Shuffle_the_Array": true,
-    "Algorithms\\Python/Shuffle_the_Array": true
+    "Algorithms\\Python/Shuffle_the_Array": true,
+    "Algorithms\\C++/Find_The_Original_Array_of_Prefix_Xor": true,
+    "Algorithms\\Python/Find_The_Original_Array_of_Prefix_Xor": true
   },
   "explorerExclude.backup": {}
 }
