Solved problem 1476 in Python and C++. Hid two folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,9 @@
     "Algorithms\\C++/Shuffle_the_Array": true,
     "Algorithms\\Python/Shuffle_the_Array": true,
     "Algorithms\\C++/Find_The_Original_Array_of_Prefix_Xor": true,
-    "Algorithms\\Python/Find_The_Original_Array_of_Prefix_Xor": true
+    "Algorithms\\Python/Find_The_Original_Array_of_Prefix_Xor": true,
+    "Algorithms\\C++/Subrectangle_Queries": true,
+    "Algorithms\\Python/Subrectangle_Queries": true
   },
   "explorerExclude.backup": {}
 }
