Solved problem 1672 in Python and C++. Hid two folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,39 @@
     "iostream": "cpp",
     "system_error": "cpp",
     "*.tcc": "cpp",
-    "map": "cpp"
+    "map": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "exception": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp",
+    "optional": "cpp",
+    "random": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "numbers": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "typeinfo": "cpp"
   },
   "files.exclude": {
     "**/.git": true,
@@ -73,7 +105,9 @@
     "Algorithms\\C++/Subrectangle_Queries": true,
     "Algorithms\\Python/Subrectangle_Queries": true,
     "Algorithms\\Python/Widest Vertical Area BetweenTwo_Points_Containing_No_Points": true,
-    "Algorithms\\C++/Widest Vertical Area BetweenTwo_Points_Containing_No_Points": true
+    "Algorithms\\C++/Widest Vertical Area BetweenTwo_Points_Containing_No_Points": true,
+    "Algorithms\\C++/Richest_Customer_Wealth": true,
+    "Algorithms\\Python/Richest_Customer_Weatlth": true
   },
   "explorerExclude.backup": {}
 }
