Finished problem 2610 in Python and C++. Hid two folders.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -111,7 +111,9 @@
     "Algorithms\\Python/Group_the_People_Given_the_Group_Size_They_Belong_To": true,
     "Algorithms\\C++/Group_the_People_Given_the_Group_Size_They_Belong_To": true,
     "Algorithms\\Python/Number_of_Employees_Who_Met_the_Target": true,
-    "Algorithms\\C++/Number_of_Employees_Who_Met_the_Target": true
+    "Algorithms\\C++/Number_of_Employees_Who_Met_the_Target": true,
+    "Algorithms\\C++/Convert_an_Array_Into_a_2D_Array_With_Conditions": true,
+    "Algorithms\\Python/Convert_an_Array_Into_a_2D_Array_With_Conditions": true
   },
   "explorerExclude.backup": {}
 }
