--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,7 +115,9 @@
     "Algorithms\\C++/Convert_an_Array_Into_a_2D_Array_With_Conditions": true,
     "Algorithms\\Python/Convert_an_Array_Into_a_2D_Array_With_Conditions": true,
     "Algorithms\\Python/How_Many_Numbers_Are_Smaller_Than_the_Current_Number": true,
-    "Algorithms\\C++/How_Many_Numbers_Are_Smaller_Than_the_Current_Number": true
+    "Algorithms\\C++/How_Many_Numbers_Are_Smaller_Than_the_Current_Number": true,
+    "Algorithms\\Python/Design_an_Ordered_Stream": true,
+    "Algorithms\\C++/Design_an_Ordered_Stream": true
   },
   "explorerExclude.backup": {}
 }
