Solved problem 2913 in Python and C++. Hid two folders.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -129,7 +129,9 @@
     "Algorithms\\Python/Count_the_Number_of_Consistent_Strings": true,
     "Algorithms\\C++/Count_the_Number_of_Consistent_Strings": true,
     "Algorithms\\C++/Unique_Morse_Code_Words": true,
-    "Algorithms\\Python/Unique_Morse_Code_Words": true
+    "Algorithms\\Python/Unique_Morse_Code_Words": true,
+    "Algorithms\\Python/Subarrays_Distinct_Element_Sum_of_Squares_I": true,
+    "Algorithms\\C++/Subarrays_Distinct_Element_Sum_of_Squares_I": true
   },
   "explorerExclude.backup": {}
 }
