--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -139,7 +139,11 @@
     "Algorithms\\C++/Rings_and_Rods": true,
     "Algorithms\\Python/Rings_and_Rods": true,
     "Algorithms\\Python/Find_Maximum_Number_of_String_Pairs": true,
-    "Algorithms\\C++/Find_Maximum_Number_of_String_Pairs": true
+    "Algorithms\\C++/Find_Maximum_Number_of_String_Pairs": true,
+    "Algorithms\\C++/Find_the_Prefix_Common_Array_of_Two_Arrays": true,
+    "Algorithms\\Python/Find_the_Prefix_Common_Array_of_Two_Arrays": true,
+    "Algorithms\\Python/Strictly_Palindromic_Number": true,
+    "Algorithms\\C++/Strictly_Palindromic_Number": true
   },
   "explorerExclude.backup": {}
 }
