--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -143,7 +143,15 @@
     "Algorithms\\C++/Find_the_Prefix_Common_Array_of_Two_Arrays": true,
     "Algorithms\\Python/Find_the_Prefix_Common_Array_of_Two_Arrays": true,
     "Algorithms\\Python/Strictly_Palindromic_Number": true,
-    "Algorithms\\C++/Strictly_Palindromic_Number": true
+    "Algorithms\\C++/Strictly_Palindromic_Number": true,
+    "Algorithms\\C++/Count_Pairs_Whose_Sum_ia_Less_than_Target": true,
+    "Algorithms\\Python/Count_Pairs_Whose_Sum_ia_Less_than_Target": true,
+    "Algorithms\\C++/Partition_Array_According_to_Given_Pvot": false,
+    "Algorithms\\Python/Partition_Array_According_to_Given_Pvot": false,
+    "Algorithms\\Python/Partition_Array_According_to_Given_Pivot": true,
+    "Algorithms\\C++/Partition_Array_According_to_Given_Pivot": true,
+    "Algorithms\\Python/Find_First_Palindromic_String_in_the_Array": true,
+    "Algorithms\\C++/Find_First_Palindromic_String_in_the_Array": true
   },
   "explorerExclude.backup": {}
 }
