Solve problem 1332 in Python and C++

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -172,7 +172,9 @@
     "Algorithms\\C++/DI_String_Match": true,
     "Algorithms\\Python/DI_String_Match": true,
     "Algorithms\\C++/Reverse_String": true,
-    "Algorithms\\Python/Reverse_String": true
+    "Algorithms\\Python/Reverse_String": true,
+    "Algorithms\\Python/Remove_Palindromic_Subsequences": true,
+    "Algorithms\\C++/Remove_Palindromic_Subsequences": true
   },
   "explorerExclude.backup": {}
 }
