Solve problem 2750 in Python and C++ Hid two folders.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -178,7 +178,9 @@
     "Algorithms\\C++/Sort_Array_By_Parity": true,
     "Algorithms\\Python/Sort_Array_By_Parity": true,
     "Algorithms\\Python/Intersection_of_Two_Arrays": true,
-    "Algorithms\\C++/Intersection_of_Two_Arrays": true
+    "Algorithms\\C++/Intersection_of_Two_Arrays": true,
+    "Algorithms\\C++/Merge_Two_2D_Arrays_by_Summing_Values": true,
+    "Algorithms\\Python/Merge_Two_2D_Arrays_by_Summing_Values": true
   },
   "explorerExclude.backup": {}
 }
