--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -186,7 +186,9 @@
     "Algorithms\\C++/Contains_Duplicate": true,
     "Algorithms\\Python/Contains_Duplicate": true,
     "Algorithms\\C++/Find_All_Duplicates_in_an_Array": true,
-    "Algorithms\\Python/Find_All_Duplicates_in_an_Array": true
+    "Algorithms\\Python/Find_All_Duplicates_in_an_Array": true,
+    "Algorithms\\Python/Valid_Anagram": true,
+    "Algorithms\\C++/Valid_Anagram": true
   },
   "explorerExclude.backup": {}
 }
