--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -192,7 +192,11 @@
     "Algorithms\\C++/Two_Sum": true,
     "Algorithms\\Python/Two_Sum": true,
     "Algorithms\\Python/Group_Anagrams": true,
-    "Algorithms\\C++/Group_Anagrams": true
+    "Algorithms\\C++/Group_Anagrams": true,
+    "Algorithms\\C++/Top_K_Frequent_Elements": true,
+    "Algorithms\\Python/Top_K_Frequent_Elements": true,
+    "Algorithms\\Python/Product_of_Array_Except_Self": true,
+    "Algorithms\\C++/Product_of_Array_Except_Self": true
   },
   "explorerExclude.backup": {}
 }
