--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -196,7 +196,9 @@
     "Algorithms\\C++/Top_K_Frequent_Elements": true,
     "Algorithms\\Python/Top_K_Frequent_Elements": true,
     "Algorithms\\Python/Product_of_Array_Except_Self": true,
-    "Algorithms\\C++/Product_of_Array_Except_Self": true
+    "Algorithms\\C++/Product_of_Array_Except_Self": true,
+    "Algorithms\\C++/Valid_Sudoku": true,
+    "Algorithms\\Python/Valid_Sudoku": true
   },
   "explorerExclude.backup": {}
 }
